--- a/website_skilled/index.html
+++ b/website_skilled/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skilled</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="cards.css">
-    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/cards.css">
+    <link rel="stylesheet" href="css/global.css">
     <link rel="shortcut icon" href="assets/favicon-32x32.png" type="image/x-icon">
 </head>
 <body style="background-color: white;">
@@ -19,6 +19,7 @@
             <input id="getstarted" type="button" value="Get Started">
             </div>
     </header>
+    <a href=""></a>
     <main>
         <div id="containertext">
             <h1>Maximize skill,<br>
