--- a/website_skilled/index.html
+++ b/website_skilled/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skilled</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/cards.css">
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="shortcut icon" href="assets/favicon-32x32.png" type="image/x-icon">
+    <link rel="stylesheet" href="css-index/style.css">
+    <link rel="stylesheet" href="css-index/cards.css">
+    <link rel="stylesheet" href="css-index/global.css">
+    <link rel="shortcut icon" href="images-index/favicon-32x32.png" type="image/x-icon">
 </head>
 <body style="background-color: white;">
     <header>
             <div class="container">
             <div id="logo">
-            <img src="assets/logo-dark.svg" alt="">
+            <img src="images-index/logo-dark.svg" alt="">
         </div>
             <input id="getstarted" type="button" value="Get Started">
             </div>
@@ -28,7 +28,7 @@
                 <input type="button" value="Get Startet">
                 </div>
                 <div id="imghero">
-                <img src="assets/image-hero-desktop.png" alt="">
+                <img src="images-index/image-hero-desktop.png" alt="">
             </div>
         </div>
     </main>
@@ -39,7 +39,7 @@
             </div>
             <div class="otherbox">
                 <div class="imagetext">
-                    <img src="assets/icon-animation.svg" alt=""> 
+                    <img src="images-index/icon-animation.svg" alt=""> 
                 </div>
                 <h1>Animation</h1>
                 <p>Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
@@ -47,7 +47,7 @@
             </div>
             <div class="otherbox">
                 <div class="imagetext">
-                    <img src="assets/icon-design.svg" alt=""> 
+                    <img src="images-index/icon-design.svg" alt=""> 
                 </div>
                 <h1>Design</h1>
                 <p>Create beautiful, usable interfaces to help shape the future of how the web looks.</p>
@@ -55,7 +55,7 @@
             </div>
             <div class="otherbox">
                 <div class="imagetext">
-                    <img src="assets/icon-photography.svg" alt=""> 
+                    <img src="images-index/icon-photography.svg" alt=""> 
                 </div>
                 <h1>Photography</h1>
                 <p>Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.</p>
@@ -63,7 +63,7 @@
             </div>
             <div class="otherbox">
                 <div class="imagetext">
-                    <img src="assets/icon-crypto.svg" alt=""> 
+                    <img src="images-indexicon-crypto.svg" alt=""> 
                 </div>
                 <h1>Crypto</h1>
                 <p>All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour course.</p>
@@ -71,7 +71,7 @@
             </div>
             <div class="otherbox">
                 <div class="imagetext">
-                    <img src="assets/icon-business.svg" alt=""> 
+                    <img src="images-index/icon-business.svg" alt=""> 
                 </div>
                 <h1>Business</h1>
                 <p>A step-by-step playbook to help you start, scale, and sustain your business without outside investment.</p>
@@ -82,7 +82,7 @@
     </section>
     <footer>
         <div id="specialfooter">
-        <img src="assets/logo-light.svg" alt="">
+        <img src="images-index/logo-light.svg" alt="">
         <input id="buttonfinish" type="button" value="Get Started">
     </div>
     </footer>
