--- a/website_blogr/index.html
+++ b/website_blogr/index.html
@@ -5,24 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogr</title>
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/sections.css">
-    <link rel="stylesheet" href="css/buttons.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css-index/global.css">
+    <link rel="stylesheet" href="css-index/header.css">
+    <link rel="stylesheet" href="css-index/main.css">
+    <link rel="stylesheet" href="css-index/sections.css">
+    <link rel="stylesheet" href="css-index/buttons.css">
+    <link rel="stylesheet" href="css-index/footer.css">
     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
 </head>
 <body>
     <header>
         <nav id="navlist">
             <div>
-                <img src="images/logo.svg" alt="">
+                <img src="images-index/logo.svg" alt="">
             </div>
             <div id="menu">
             <ul>
                 <li>
-                    <a href="#">Product<img src="images/icon-arrow-light.svg" alt=""></a>
+                    <a href="#">Product<img src="images-index/icon-arrow-light.svg" alt=""></a>
                     <ul>
                         <li><a href="#">Overview</a></li>
                         <li><a href="#">Pricing</a></li>
@@ -32,7 +32,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Company <img src="images/icon-arrow-light.svg" alt=""></a>
+                    <a href="#">Company <img src="images-index/icon-arrow-light.svg" alt=""></a>
                     <ul>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Team</a></li>
@@ -41,7 +41,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Connect <img src="images/icon-arrow-light.svg" alt=""></a>
+                    <a href="#">Connect <img src="images-index/icon-arrow-light.svg" alt=""></a>
                     <ul>
                         <li><a href="#">Contact</a></li>
                         <li><a href="#">Newsletter</a></li>
@@ -84,13 +84,13 @@
     </div>
             </div>
             <div id="circlemain">
-            <img src="images/illustration-editor-desktop.svg" alt="">
+            <img src="images-index/illustration-editor-desktop.svg" alt="">
             </div>
         </div>
     </main>
     <section id="section1">
         <div id="containerpt">
-            <img src="images/illustration-phones.svg" alt="">
+            <img src="images-index/illustration-phones.svg" alt="">
             <div id="textscel">
             <h1>State of the Art Infrastructure</h1>
                 <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. This ensures your site will load instantly, no matter where your readers are, keeping your site competitive</p>
@@ -99,7 +99,7 @@
     </section>
     <section id="section2">
         <div id="imgsec2">
-            <img src="images/illustration-laptop-desktop.svg" alt="">
+            <img src="images-index/illustration-laptop-desktop.svg" alt="">
         </div>
         <div id="textssec2">
             <h1>Free, open, simple</h1>
@@ -111,7 +111,7 @@
     <footer>
         <div id="containerfooter">
     <div>
-        <img src="images/logo.svg" alt="">
+        <img src="images-index/logo.svg" alt="">
     </div>
     <div class="containerlists">
     <h1>Product</h1>
