--- a/website_fylo/index.html
+++ b/website_fylo/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css-index/cards.css">
     <link rel="stylesheet" href="css-index/email.css">
     <link rel="stylesheet" href="css-index/footer.css">
-    <script type="text/JavaScript"   src="script.j"></script>
+    <script type="text/JavaScript"   src="script.js"></script>
     <link rel="shortcut icon" href="images-index/favicon-32x32.png" type="image/x-icon">
 </head>
 <body onload="dev()">
