--- a/website_fylo/index.html
+++ b/website_fylo/index.html
@@ -131,7 +131,7 @@
         </section>
         <footer>
             <div id="struturefooter">
-                <div>
+                <div id="img">
                     <img src="images-index/logo.svg" alt="">
                 </div>
                 <div id="navfooter">
@@ -146,34 +146,29 @@
                 </ul>
                 <ul class="listnav">
                     <li>
-                        About Us
+                        <a href="">About US</a>
                     </li>
                     <li>
-                        Job
+                        <a href="">Job</a>
                     </li>
                     <li>
-                        Press
+                        <a href="">Press</a>
                     </li>
                     <li>
-                        Blog
+                        <a href="">Blog</a>
                     </li>
                 </ul>
                 <ul class="listnav">
                     <li>
-                        Contact US
+                        <a href="">Contact US</a>
                     </li>
                     <li>
-                        Terms   
+                        <a href="">Terms</a> 
                     </li>
                     <li>
-                        Privacy
+                        <a href="">Privacy</a>
                     </li>
                 </ul>
-                <div>
-                        <img src="images-index/favicon-32x32.png" alt="" style="margin-right: 5px;">
-                        <img src="images-index/favicon-32x32.png" alt="" style="margin-right: 5px;">
-                        <img src="images-index/favicon-32x32.png" alt="" style="margin-right: 5px;">
-                </div>
             </div>
             </div>
         </footer>
