--- a/website_loop-studio/index.html
+++ b/website_loop-studio/index.html
@@ -42,7 +42,17 @@
         </div>
     </header>
     <main>
+        <div id="container">
+    <div>
         <img src="images-index/image-interactive.jpg" alt="">
+    </div>
+        <div id="textmain">
+        <h1>THE LEADER IN INTERACTIVE VR</h1>
+        <p>Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies 
+            around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to 
+            their brand.</p>
+        </div>
+    </div>
     </main>
 </body>
 </html>
