--- a/website_loop-studio/index.html
+++ b/website_loop-studio/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="css-index/global.css">
     <link rel="stylesheet" href="css-index/header.css">
     <link rel="stylesheet" href="css-index/main.css">
+    <script type="text/JavaScript" src="script.js"></script>
     <title>Loop Studio</title>
 </head>
-<body>
+<body onload="dev()">
     <header>
         <nav>
             <div>
