--- a/website_loop-studio/index.html
+++ b/website_loop-studio/index.html
@@ -43,7 +43,7 @@
         </div>
     </header>
     <main>
-        <div id="container">
+    <div id="centermain">
     <div>
         <img src="images-index/image-interactive.jpg" alt="">
     </div>
@@ -52,8 +52,8 @@
         <p>Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies 
             around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to 
             their brand.</p>
-        </div>
     </div>
+</div>
     </main>
 </body>
 </html>
