--- a/website_loop-studio/index.html
+++ b/website_loop-studio/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css-index/global.css">
     <link rel="stylesheet" href="css-index/header.css">
     <link rel="stylesheet" href="css-index/main.css">
+    <link rel="stylesheet" href="css-index/section.css">
+    <link rel="stylesheet" href="css-index/cards.css">
     <script type="text/JavaScript" src="script.js"></script>
     <title>Loop Studio</title>
 </head>
@@ -44,7 +46,7 @@
     </header>
     <main>
     <div id="centermain">
-    <div>
+        <div>
         <img src="images-index/image-interactive.jpg" alt="">
     </div>
         <div id="textmain">
@@ -52,8 +54,42 @@
         <p>Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies 
             around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to 
             their brand.</p>
+        </div>
     </div>
-</div>
     </main>
+    <section>
+        <div id="startcard">
+            <h1>OUR CREATIONS</h1>
+            <input type="button" value="SEE ALL">
+        </div>
+        <div class="rowcard">
+            <div class="card" style="background: url(images-index/image-deep-earth.jpg);">
+
+            </div>
+            <div class="card" style="background: url(images-index/image-night-arcade.jpg);">
+
+            </div>
+            <div class="card" style="background: url(images-index/image-soccer-team.jpg);">
+
+            </div>
+            <div class="card" style="background: url(images-index/image-grid.jpg);">
+                
+            </div>
+        </div>  
+        <div class="rowcard">
+            <div class="card" style="background: url(images-index/image-from-above.jpg);">
+
+            </div>
+            <div class="card" style="background: url(images-index/image-pocket-borealis.jpg);">
+
+            </div>
+            <div class="card" style="background: url(images-index/image-curiosity.jpg);">
+
+            </div>
+            <div class="card" style="background: url(images-index/image-fisheye.jpg);">
+                
+            </div>  
+        </div>
+    </section>
 </body>
 </html>
