--- a/website_loop-studio/index.html
+++ b/website_loop-studio/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css-index/main.css">
     <link rel="stylesheet" href="css-index/section.css">
     <link rel="stylesheet" href="css-index/cards.css">
+    <link rel="stylesheet" href="css-index/footer.css">
     <script type="text/JavaScript" src="script.js"></script>
     <title>Loop Studio</title>
 </head>
@@ -58,38 +59,59 @@
     </div>
     </main>
     <section>
+        <div id="containerstartcard">
         <div id="startcard">
             <h1>OUR CREATIONS</h1>
             <input type="button" value="SEE ALL">
         </div>
+    </div>
         <div class="rowcard">
             <div class="card" style="background: url(images-index/image-deep-earth.jpg);">
-
+                <div class="backgroundcard">
+                <h1>DEEP EARTH</h1>
+            </div>
             </div>
             <div class="card" style="background: url(images-index/image-night-arcade.jpg);">
-
+                <div class="backgroundcard">
+                <h1>NIGHT ARCADE</h1>
+            </div>
             </div>
             <div class="card" style="background: url(images-index/image-soccer-team.jpg);">
-
+                <div class="backgroundcard">
+                <h1>SOCCER TEAM VR</h1>
+            </div>
             </div>
             <div class="card" style="background: url(images-index/image-grid.jpg);">
-                
+                <div class="backgroundcard">
+                <h1>THE GRID</h1>
+            </div>
             </div>
         </div>  
         <div class="rowcard">
             <div class="card" style="background: url(images-index/image-from-above.jpg);">
-
+                <div class="backgroundcard">
+                <h1>FROM UP ABOVER VR</h1>
+            </div>
             </div>
             <div class="card" style="background: url(images-index/image-pocket-borealis.jpg);">
-
+                <div class="backgroundcard">
+                <h1>POCKET BOREALIS</h1>
+            </div>
             </div>
             <div class="card" style="background: url(images-index/image-curiosity.jpg);">
-
+                <div class="backgroundcard">
+                <h1>THE CURIOSITY</h1>
+            </div>
             </div>
             <div class="card" style="background: url(images-index/image-fisheye.jpg);">
-                
+                <div class="backgroundcard">
+                <h1>MAKE IT FISHEYE</h1>
+            </div>
             </div>  
         </div>
     </section>
+    <footer>
+
+    </footer>
 </body>
 </html>
