--- a/website_loop-studio/index.html
+++ b/website_loop-studio/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css-index/section.css">
     <link rel="stylesheet" href="css-index/cards.css">
     <link rel="stylesheet" href="css-index/footer.css">
+    <link rel="shortcut icon" href="images-index/favicon-32x32.png" type="image/x-icon">
     <script type="text/JavaScript" src="script.js"></script>
     <title>Loop Studio</title>
 </head>
@@ -27,10 +28,10 @@
                     <a href="#">Careers</a>
                 </li>
                 <li>
-                    <a href="#">Events</a>
+                    <a href="#"">Events</a>
                 </li>
                 <li>
-                    <a href="#">Products</a>
+                    <a href="#"">Products</a>
                 </li>
                 <li>
                     <a href="#">Support</a>
@@ -110,8 +111,49 @@
             </div>  
         </div>
     </section>
+    <div id="spacesection"></div>
     <footer>
-
+        <div id="centerfooter">
+        <div id="footerstart">
+        <div>
+            <img src="images-index/logo.svg" alt="">
+        </div>
+        <ul class="alignlist">
+            <li>
+                <a href="#">About</a>
+            </li>
+            <li>
+                <a href="#">Careers</a>
+            </li>
+            <li>
+                <a href="#">Events</a>
+            </li>
+            <li>
+                <a href="#">Products</a>
+            </li>
+            <li>
+                <a href="#">Support</a>
+            </li>
+        </ul>
+        </div>
+    </div>
+    <div id="finalfooter">
+    <div style="display: flex; gap: 1rem;">
+    <div>
+        <img src="images-index/icon-facebook.svg" alt="">
+    </div>
+    <div>
+        <img src="images-index/icon-twitter.svg" alt="">
+    </div>
+    <div>
+        <img src="images-index/icon-instagram.svg" alt="">
+    </div>
+    <div>
+        <img src="images-index/icon-pinterest.svg" alt="">
+    </div>
+    </div>
+    <p>© 2021 Loopstudios. All rights reserved.</p>
+    </div>
     </footer>
-</body>
+    </body>
 </html>
