--- a/website_loop-studio/index.html
+++ b/website_loop-studio/index.html
@@ -140,16 +140,16 @@
     <div id="finalfooter">
     <div style="display: flex; gap: 1rem;">
     <div>
-        <img src="images-index/icon-facebook.svg" alt="">
+        <a href="#"><img src="images-index/icon-facebook.svg" alt=""></a>
     </div>
     <div>
-        <img src="images-index/icon-twitter.svg" alt="">
+        <a href="#"><img src="images-index/icon-twitter.svg" alt=""></a>
     </div>
     <div>
-        <img src="images-index/icon-instagram.svg" alt="">
+        <a href="#"><img src="images-index/icon-instagram.svg" alt=""></a>
     </div>
     <div>
-        <img src="images-index/icon-pinterest.svg" alt="">
+        <a href="#"><img src="images-index/icon-pinterest.svg" alt=""></a>
     </div>
     </div>
     <p>© 2021 Loopstudios. All rights reserved.</p>
