--- a/website_easybank/index.html
+++ b/website_easybank/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css-index/global.css">
     <link rel="stylesheet" href="css-index/header.css">
     <link rel="stylesheet" href="css-index/main.css">
+    <link rel="stylesheet" href="css-index/section.css">
+    <link rel="stylesheet" href="css-index/card.css">
     <script type="text/JavaScript" src="script.js"></script>
     <title>Easy Bank</title>
 </head>
@@ -46,12 +48,41 @@
             <div id="aligncel">
             <img src="images-index/image-mockups.png" alt="">
         </div>
-        </div>
     </main>
     <section>
         <div id="sectionstart">
             <h1>Why choose Easybank?</h1>
             <p>We leverage Open Banking to turn your bank account into your financial hub. Control your finances like never before.</p>
+        </div>
+        <div id="cards">
+            <div class="card">
+                <div>
+                <img src="images-index/icon-online.svg" alt="">
+            </div>
+            <h1>Online Banking</h1>
+            <p>Our modern web and mobile applications allow you to keep track of your finances wherever you are in the world.</p>
+            </div>
+                <div class="card">
+                    <div>
+                    <img src="images-index/icon-budgeting.svg" alt="">
+                </div>
+                <h1>Simple Budgeting</h1>
+                <p>See exactly where your money goes each month. Receive notifications when you’re close to hitting your limits.</p>
+                </div>
+                <div class="card">
+                    <div>
+                    <img src="images-index/icon-onboarding.svg" alt="">
+                </div>
+                <h1>Fast Onboarding</h1>
+                <p>We don’t do branches. Open your account in minutes online and start taking control of your finances right away.</p>
+                </div>
+                <div class="card">
+                    <div>
+                    <img src="images-index/icon-api.svg" alt="">
+                </div>
+                <h1>Open API</h1>
+                <p>Manage your savings, investments, pension, and much more from one account. Tracking your money has never been easier.</p>
+                </div>
         </div>
     </section>
 </body>
