--- a/website_easybank/index.html
+++ b/website_easybank/index.html
@@ -1,89 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css-index/global.css">
-    <link rel="stylesheet" href="css-index/header.css">
-    <link rel="stylesheet" href="css-index/main.css">
-    <link rel="stylesheet" href="css-index/section.css">
-    <link rel="stylesheet" href="css-index/card.css">
-    <script type="text/JavaScript" src="script.js"></script>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/home.css" />
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/components/header.css">
+    <link rel="stylesheet" href="css/components/card.css">
+    <link rel="stylesheet" href="css/components/invite-button.css">
+    <script type="module" src="script.js"></script>
     <title>Easy Bank</title>
 </head>
 <body>
     <header>
-        <nav>
-            <div>
-                <img src="images-index/logo.svg" alt="">
-            </div>
-            <ul>
-                <li>
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
-                <li>
-                    <a href="#">Blog</a>
-                </li>
-                <li>
-                    <a href="#">Careers</a>
-                </li>
-            </ul>
-            <input type="button" value="Request Invite" onclick="dev()">
-        </nav>
+    <img class="logo" src="images-index/logo.svg" alt="" />
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+        <a href="#">Blog</a>
+        <a href="#">Careers</a>
+    </nav>
+    <button class="invite">Request Invite</button>
     </header>
     <main>
-        <div id="requestinvite">
-            <h1>Next generation digital banking</h1>
-            <p>Take your financial life online. Your Easybank account will be a one-stop-shop for spending, saving, budgeting, investing, and much more.</p>
-            <input type="button" value="Request Invite" onclick="dev()">
+    <section class="hero">
+        <div class="text-wrap">
+        <h1>Next generation digital banking</h1>
+        <p>
+            Take your financial life online. Your Easybank account will be a
+            one-stop-shop for spending, saving, budgeting, investing, and much
+            more.
+        </p>
+        <button class="invite">Request Invite</button>
         </div>
-        <div id="cellphonesview">
-            <div id="aligncel">
-            <img src="images-index/image-mockups.png" alt="">
-        </div>
-    </main>
-    <section>
-        <div id="sectionstart">
-            <h1>Why choose Easybank?</h1>
-            <p>We leverage Open Banking to turn your bank account into your financial hub. Control your finances like never before.</p>
-        </div>
-        <div id="cards">
-            <div class="card">
-                <div>
-                <img src="images-index/icon-online.svg" alt="">
-            </div>
-            <h1>Online Banking</h1>
-            <p>Our modern web and mobile applications allow you to keep track of your finances wherever you are in the world.</p>
-            </div>
-                <div class="card">
-                    <div>
-                    <img src="images-index/icon-budgeting.svg" alt="">
-                </div>
-                <h1>Simple Budgeting</h1>
-                <p>See exactly where your money goes each month. Receive notifications when you’re close to hitting your limits.</p>
-                </div>
-                <div class="card">
-                    <div>
-                    <img src="images-index/icon-onboarding.svg" alt="">
-                </div>
-                <h1>Fast Onboarding</h1>
-                <p>We don’t do branches. Open your account in minutes online and start taking control of your finances right away.</p>
-                </div>
-                <div class="card">
-                    <div>
-                    <img src="images-index/icon-api.svg" alt="">
-                </div>
-                <h1>Open API</h1>
-                <p>Manage your savings, investments, pension, and much more from one account. Tracking your money has never been easier.</p>
-                </div>
+        <div class="img-background">
+        <img src="images-index/image-mockups.png" alt="" />
         </div>
     </section>
+    <section class="why">
+        <div class="inner">
+        <h2>Why choose Easybank?</h2>
+        <p>
+            We leverage Open Banking to turn your bank account into your
+            financial hub. Control your finances like never before.
+        </p>
+        <ul class="cards">
+            <li class="card">
+            <img src="images-index/icon-online.svg" alt="" />
+            <h3>Online Banking</h3>
+            <p>
+                Our modern web and mobile applications allow you to keep track
+                of your finances wherever you are in the world.
+            </p>
+            </li>
+            <li class="card">
+            <img src="images-index/icon-budgeting.svg" alt="" />
+            <h3>Simple Budgeting</h3>
+            <p>
+                See exactly where your money goes each month. Receive
+                notifications when you’re close to hitting your limits.
+            </p>
+            </li>
+            <li class="card">
+            <img src="images-index/icon-onboarding.svg" alt="" />
+            <h3>Fast Onboarding</h3>
+            <p>
+                We don’t do branches. Open your account in minutes online and
+                start taking control of your finances right away.
+            </p>
+            </li>
+            <li class="card">
+            <img src="images-index/icon-api.svg" alt="" />
+            <h3>Open API</h3>
+            <p>
+                Manage your savings, investments, pension, and much more from
+                one account. Tracking your money has never been easier.
+            </p>
+            </li>
+        </ul>
+        </div>
+    </section>
+    </main>
 </body>
 </html>
