--- a/website_easybank/index.html
+++ b/website_easybank/index.html
@@ -52,7 +52,7 @@
             </p>
             </li>
             <li class="card">
-            <img src="images-index/icon-budgeting.svg" alt="" />
+            <img src="images-index/icon-budgeting.svg" alt="icon-budgeting" />
             <h3>Simple Budgeting</h3>
             <p>
                 See exactly where your money goes each month. Receive
@@ -60,7 +60,7 @@
             </p>
             </li>
             <li class="card">
-            <img src="images-index/icon-onboarding.svg" alt="" />
+            <img src="images-index/icon-onboarding.svg" alt="icon-onboarding" />
             <h3>Fast Onboarding</h3>
             <p>
                 We don’t do branches. Open your account in minutes online and
@@ -68,7 +68,7 @@
             </p>
             </li>
             <li class="card">
-            <img src="images-index/icon-api.svg" alt="" />
+            <img src="images-index/icon-api.svg" alt="icon-api" />
             <h3>Open API</h3>
             <p>
                 Manage your savings, investments, pension, and much more from
@@ -78,6 +78,37 @@
         </ul>
         </div>
     </section>
+    <article class="why">
+        <div class="inner">
+            <h2>Latest Articles</h2>
+            <ul class="cards">
+                <li class="card">
+                    <img src="images-index/image-currency.jpg" alt="">
+                    <p id="miniletter">By Claire Robinson</p>
+                    <h3>Receive money in any currency with no fees</h3>
+                    <p>The world is getting smaller and we’re becoming more mobile. So why should you be forced to only receive money in a single …</p>
+                </li>
+                <li class="card">
+                    <img src="images-index/image-restaurant.jpg" alt="">
+                    <p id="miniletter">By Wilson Hutton</p>
+                    <h3>Treat yourself without worrying about money</h3>
+                    <p>Our simple budgeting feature allows you to separate out your spending and set realistic limits each month. That means you …</p>
+                </li>
+                <li class="card">
+                    <img src="images-index/image-plane.jpg" alt="">
+                    <p id="miniletter">By Wilson Hutton</p>
+                    <h3>Take your Easybank card wherever you go</h3>
+                    <p>We want you to enjoy your travels. This is why we don’t charge any fees on purchases while you’re abroad. We’ll even show you …</p>
+                </li>
+                <li class="card">
+                    <img src="images-index/image-confetti.jpg" alt="">
+                    <p id="miniletter">By Claire Robinson</p>
+                    <h3>Our invite-only Beta accounts are now live!</h3>
+                    <p>After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to request an invite through the site ...</p>
+                </li>
+            </ul>
+        </div>
+    </article>
     </main>
 </body>
 </html>
