--- a/website_easybank/index.html
+++ b/website_easybank/index.html
@@ -84,27 +84,39 @@
             <ul class="cards">
                 <li class="card">
                     <img src="images-index/image-currency.jpg" alt="">
-                    <p id="miniletter">By Claire Robinson</p>
+                    <h6>By Claire Robinson</h6>
                     <h3>Receive money in any currency with no fees</h3>
-                    <p>The world is getting smaller and we’re becoming more mobile. So why should you be forced to only receive money in a single …</p>
+                    <p>
+                        The world is getting smaller and we’re becoming more mobile.
+                        So why should you be forced to only receive money in a single …
+                    </p>
                 </li>
                 <li class="card">
                     <img src="images-index/image-restaurant.jpg" alt="">
-                    <p id="miniletter">By Wilson Hutton</p>
+                    <h6>By Wilson Hutton</h6>
                     <h3>Treat yourself without worrying about money</h3>
-                    <p>Our simple budgeting feature allows you to separate out your spending and set realistic limits each month. That means you …</p>
+                    <p>
+                        Our simple budgeting feature allows you to separate out your
+                        spending and set realistic limits each month. That means you …
+                    </p>
                 </li>
                 <li class="card">
                     <img src="images-index/image-plane.jpg" alt="">
-                    <p id="miniletter">By Wilson Hutton</p>
+                    <h6>By Wilson Hutton</h6>
                     <h3>Take your Easybank card wherever you go</h3>
-                    <p>We want you to enjoy your travels. This is why we don’t charge any fees on purchases while you’re abroad. We’ll even show you …</p>
+                    <p>
+                        We want you to enjoy your travels. This is why we don’t charge 
+                        any fees on purchases while you’re abroad. We’ll even show you …
+                    </p>
                 </li>
                 <li class="card">
                     <img src="images-index/image-confetti.jpg" alt="">
-                    <p id="miniletter">By Claire Robinson</p>
+                    <h6>By Claire Robinson</h6>
                     <h3>Our invite-only Beta accounts are now live!</h3>
-                    <p>After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to request an invite through the site ...</p>
+                    <p>
+                        After a lot of hard work by the whole team, we’re excited to launch
+                        our closed beta. It’s easy to request an invite through the site …
+                    </p>
                 </li>
             </ul>
         </div>
