--- a/website_easybank/index.html
+++ b/website_easybank/index.html
@@ -12,11 +12,13 @@
     <header>
     <img class="logo" src="images-index/logo.svg" alt="" />
     <nav>
+        <ul>
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
         <a href="#">Blog</a>
         <a href="#">Careers</a>
+        </ul>
     </nav>
     <button class="invite">Request Invite</button>
     </header>
@@ -122,5 +124,16 @@
         </div>
     </article>
     </main>
+    <footer class="why">
+    <div class="inner">
+        <img class="logo" src="images-index/test.svg" alt="" />
+    <ul>
+        <a href="#"><img class="icons" src="images-index/icon-facebook.svg" alt=""></a>
+        <a href="#"><img class="icons" src="images-index/icon-youtube.svg" alt=""></a>
+        <a href="#"><img class="icons" src="images-index/icon-twitter.svg" alt=""></a>
+        <a href="#"><img class="icons" src="images-index/icon-pinterest.svg" alt=""></a>
+        <a href="#"><img class="icons" src="images-index/icon-instagram.svg" alt=""></a>
+    </ul>
+    </footer>
 </body>
 </html>
