--- a/website_easybank/index.html
+++ b/website_easybank/index.html
@@ -122,10 +122,11 @@
                 </li>
             </ul>
         </div>
-    </article>
-    </main>
-    <footer class="why">
-    <div class="inner">
+        </article>
+        </main>
+        <footer class="why">
+    <div class="footerinner">
+        <div class="logoicons">
         <img class="logo" src="images-index/test.svg" alt="" />
     <ul>
         <a href="#"><img class="icons" src="images-index/icon-facebook.svg" alt=""></a>
@@ -134,6 +135,24 @@
         <a href="#"><img class="icons" src="images-index/icon-pinterest.svg" alt=""></a>
         <a href="#"><img class="icons" src="images-index/icon-instagram.svg" alt=""></a>
     </ul>
-    </footer>
+        </div>
+        <div class="separate">
+    <ul class="listfooter">
+        <a href="">About US</a>
+        <a href="">Contact</a>
+        <a href="">Blog</a>
+    </ul>
+    <ul class="listfooter">
+        <a href="">Carers</a>
+        <a href="">Support</a>
+        <a href="">Privacy Policy</a>
+    </ul>
+        </div>
+        <div class="utilsfooter">
+            <button class="invite">Request Invite</button>
+            <h6>© Easybank. All Rights Reserved</h6>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
